--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 language: node_js
 node_js:
-- "10"
+- "12"
 
 install:
 - npm install
 
 script:
 - npm run eslint
-- npm run build
 - npm run test
-- ./node_modules/.bin/codecov
+- bash <(curl -s https://codecov.io/bash)
 
 cache:
   directories:
